<resources>
    <string name="app_name">Tempo</string>
    <string name="titleDescription">Tempo Title</string>
    <string name="floatButton">Float Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="Save">Save</string>
    <string name="Update">Update</string>
    <string name="register">REGISTER</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="redirect">New to Tempo? Sign Up</string>
    <string name="lRedirect">Already have a Account? Login</string>
    <string name="hi">Hi, </string>
    <string name="available">Available</string>
    <string name="completed">Completed</string>
    <string name="addTask">Task Add</string>
    <string name="updateTask">Task Update</string>
    <string name="addName">Task Name</string>
    <string name="taskDescription">Task Description</string>
    <string name="taskDeadline">Task Deadline</string>
    <string name="taskName">Task Name</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="floatingBTN">floating Button</string>
    <string name="taskPriority">Task Priority</string>
    <string-array name="priority_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>