<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.add.AddFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/exo_extrabold"
        android:text="@string/addTask"
        android:textColor="@color/yellow"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/edittext_rounded_bg"
        android:hint="@string/taskName"
        android:gravity="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/taskDescription"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/deadline"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        android:hint="@string/taskDeadline"
        android:inputType="datetime"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_bg"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline" />

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/exo_extrabold"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>